# group_decomposition

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fragfinder.py  pylintReading.txt  pyproject.toml  requirements.txt  setup.py
Development Notebooks/: 100_test.ipynb  Adding_H.ipynb  DUDE_00425887_dhi1_actives_C19H15F3N4_CIR.mol2  DUDE_03229393_inha_decoys_C17H8F5N3O_CIR.cml  DUDE_03229393_inha_decoys_C17H8F5N3O_CIR.xyz  DUDE_13489372_cah2_decoys_C24H35N7O5_CIR.cml  DUDE_13489372_cah2_decoys_C24H35N7O5_CIR.mol  DUDE_16737368_kif11_decoys_C30H21N5O_CIR.cml  DUDE_16737368_kif11_decoys_C30H21N5O_CIR.mol  DUDE_16737368_kif11_decoys_C30H21N5O_CIR.xyz  DUDE_16958170_hivpr_decoys_C22H19N6O8_CIR.cml  DUDE_16958170_hivpr_decoys_C22H19N6O8_CIR.mol  DUDE_33392010_mmp13_decoys_C24H28ClN5O6_CIR.cml  DUDE_33392010_mmp13_decoys_C24H28ClN5O6_CIR.mol  DUDE_63350531_mmp13_decoys_C27H25N3O6_CIR.cml  DUDE_63350531_mmp13_decoys_C27H25N3O6_CIR.mol  DUDE_63795253_lck_decoys_C29H30N4O3_CIR.mol  Developing Atom Order.ipynb  DevelopingAttachments.ipynb  SubH_AttC-C-C_wb97xd_aug-cc-pvtz.gjf  SubH_AttCC_wb97xd_aug-cc-pvtz.gjf  SubH_AttC_wb97xd_aug-cc-pvtz.gjf  SubH_AttCdO_wb97xd_aug-cc-pvtz.gjf  SubH_AttCtN_wb97xd_aug-cc-pvtz.gjf  SubH_AttN1CC1_wb97xd_aug-cc-pvtz.gjf  SubH_AttNCdN_wb97xd_aug-cc-pvtz.gjf  SubH_AttNCdO_wb97xd_aug-cc-pvtz.gjf  SubH_AttN_wb97xd_aug-cc-pvtz.gjf  SubH_Attc1ccccc1_wb97xd_aug-cc-pvtz.gjf  SubH_C_wb97xd_aug-cc-pvtz.gjf  SubH_N1CC1_wb97xd_aug-cc-pvtz.gjf  SubH_NCdN_wb97xd_aug-cc-pvtz.gjf  SubH_N_wb97xd_aug-cc-pvtz.gjf  adjusting_ring_bos.ipynb  at_ty_unique.cml  (+16 more)
(+280 files in other folders)
